--- a/docs/public/secure-registry.adoc
+++ b/docs/public/secure-registry.adoc
@@ -8,13 +8,13 @@ A secure devfile registry is a devfile registry that user can only use credentia
 
 User can host secure devfile registry on private GitHub repository and Enterprise GtiHub repository.
 
-== Steps for adding secure devfile registry when the devfile registry is hosted on GitHub repository
+== Steps for adding secure devfile registry when the secure devfile registry is hosted on GitHub repository
 
-=== Step 1: Creating a new GitHub repository to host the devfile registry
+=== Step 1: Creating a new GitHub repository to host the secure devfile registry
 
-Please follow https://docs.github.com/en/github/creating-cloning-and-archiving-repositories/creating-a-new-repository[this instruction] to create a new GitHub repository and push the devfile registry to the created repository. The sample GitHub-hosted devfile registry can be found https://github.com/odo-devfiles/registry/[here].
+Please follow https://docs.github.com/en/github/creating-cloning-and-archiving-repositories/creating-a-new-repository[this instruction] to create a new private or Enterprise GitHub repository and push the devfile registry to the created repository. The sample GitHub-hosted devfile registry can be found https://github.com/odo-devfiles/registry/[here].
 
-=== Step 2: Creating a personal access token 
+=== Step 2: Creating a personal access token to access the secure devfile registry
 
 Please follow https://docs.github.com/en/github/authenticating-to-github/creating-a-personal-access-token[this instruction] to create a personal access token, select `repo` as token scope.
 
@@ -35,3 +35,30 @@ Please run `odo registry add <registry name> <registry URL> --token <token>` to 
 - <registry name>: user-defined devfile registry name.
 - <registry URL>: the URL of GitHub repository that you create on step 1.
 - <token>: the personal access token that you create on step 2.
+
+== Steps for setting up secure starter project when the secure starter project is hosted on GitHub repository
+
+=== Step 1: Creating a new GitHub repository to host the secure starter project
+
+1. Please follow https://docs.github.com/en/github/creating-cloning-and-archiving-repositories/creating-a-new-repository[this instruction] to create a new private or Enterprise GitHub repository and push the starter project to the created repository. The sample GitHub-hosted starter project can be found https://github.com/odo-devfiles/nodejs-ex[here].
+
+2. Ensure the `projects` section in the corresponding devfile of secure devfile registry links to the secure starter project, for example:
+
+```
+projects:
+  - name: nodejs-starter
+    git:
+      location: "<secure starter project link>"
+```
+
+=== Step 2: Creating a personal access token to access the secure starter project
+Please follow https://docs.github.com/en/github/authenticating-to-github/creating-a-personal-access-token[this instruction] to create a personal access token, select `repo` as token scope.
+
+=== Step 3: Creating a devfile component from the secure devfile registry and downloading the secure starter project from the secure starter project host
+
+Please run `odo create nodejs --registry <registry name> --starter --starter-token <starter project token>`
+
+- <registry name>: user-defined devfile registry name.
+- <starter project token>: the personal access token that you create on step 6.
+
+Note: given GitHub only supports user-scoped personal access token, so if the repository that hosts the secure registry and the repository that hosts the secure starter project are created under the same GitHub user, then the token can be used for both downloading devfile and starter project. For that case you don't need to explicitly pass in the flag --starter-token <starter project token>, odo can automatically use one token to download both devfile and starter project
