--- a/docs/public/understanding-odo.adoc
+++ b/docs/public/understanding-odo.adoc
@@ -42,32 +42,37 @@ All official example Devfiles are hosted on the link:https://github.com/odo-devf
 .List of Devfiles which are officially supported by odo
 [options="header"]
 |===
-|Language | Devfile Name | Description | Devfile Source
+|Language | Devfile Name | Description | Devfile Source | Supported Platform
 
 | Java
 | java-maven
 | Upstream Maven and OpenJDK 11
 | link:https://github.com/odo-devfiles/registry/blob/master/devfiles/java-maven/devfile.yaml[java-maven/devfile.yaml]
+| amd64
 
 | Java
 | java-openliberty
 | Open Liberty microservice in Java      
 | link:https://github.com/odo-devfiles/registry/blob/master/devfiles/java-openliberty/devfile.yaml[java-openliberty/devfile.yaml]
+| amd64
 
 | Java
 | java-quarkus
 | Upstream Quarkus with Java+GraalVM
 | link:https://github.com/odo-devfiles/registry/blob/master/devfiles/java-quarkus/devfile.yaml[java-quarkus/devfile.yaml]
+| amd64
 
 | Java
 | java-springboot
 | Spring Boot® using Java 
 | link:https://github.com/odo-devfiles/registry/blob/master/devfiles/java-springboot/devfile.yaml[java-springboot/devfile.yaml]
+| amd64
 
 | Node.JS
 | nodejs
 | Stack with NodeJS 12
 | link:https://github.com/odo-devfiles/registry/blob/master/devfiles/nodejs/devfile.yaml[nodejs/devfile.yaml]
+| amd64, s390x, ppc64le
 
 |===
 [id="odo-listing-available-images"]
