--- a/docs/public/using-devfile-lifecycle-events.adoc
+++ b/docs/public/using-devfile-lifecycle-events.adoc
@@ -67,20 +67,20 @@ events:
 
 ### preStart
 
-preStart events are executed as init containers for the project pod in the order they are specified. The devfile command's `commandLine` and `workingDir` become the init container's command and as a result the devfile component container's `command` and `args` or the container image's `Command` and `Args` are overwritten. If a composite command with `parallel: true` is used, it will be executed sequentially as Kubernetes init containers only execute in sequence.
+PreStart events are executed as init containers for the project pod in the order they are specified. The devfile command's `commandLine` and `workingDir` become the init container's command and as a result the devfile component container's `command` and `args` or the container image's `Command` and `Args` are overwritten. If a composite command with `parallel: true` is used, it will be executed sequentially as Kubernetes init containers only execute in sequence.
 
-In the above example, preStart is going to execute the devfile command `connectDB` as an init container for the odo component's main pod.
+In the above example, PreStart is going to execute the devfile command `connectDB` as an init container for the odo component's main pod.
 
 Caution should be exercised when using preStart with devfile container component that mount sources. File operations with preStart on the project sync directory may result in inconsistent behaviour.
 
 ### postStart
 
-postStart events are executed when the Kubernetes deployment for the odo component is created. 
+PostStart events are executed when the Kubernetes deployment for the odo component is created. 
 
-In the above example, postStart is going to execute the composite command `postStartCompositeCmd` once the odo component's deployment is created and the pod is up and running. The composite command `postStartCompositeCmd`'s sub-command `copy` and `initCache` are going to be executed in parallel.
+In the above example, PostStart is going to execute the composite command `postStartCompositeCmd` once the odo component's deployment is created and the pod is up and running. The composite command `postStartCompositeCmd`'s sub-command `copy` and `initCache` are going to be executed in parallel.
 
 ### preStop
 
-preStop events are executed before the Kubernetes deployment for the odo component is deleted. 
+PreStop events are executed before the Kubernetes deployment for the odo component is deleted. 
 
-In the above example, postStop is going to execute the devfile command `disconnectDB` before the odo component deployment is deleted.
+In the above example, PreStop is going to execute the devfile command `disconnectDB` before the odo component deployment is deleted.
