Remove experimental mode from docs
**What type of PR is this?**
/kind documentation
[skip ci]

**What does does this PR do / why we need it**:

There are outdated portions of our documentation that asks for you to
enable experimental mode before using Devfile or Operator Hub.

Both of those have moved out of experimental mode.

Since our website (https://odo.dev) reflects using the `alpha` release,
we must update the outdated documentation.

**Which issue(s) this PR fixes**:

N/A

**PR acceptance criteria**:

- [X] Unit test

- [X] Integration test

- [X] Documentation

- [X] I have read the [test guidelines](https://github.com/openshift/odo/blob/master/docs/dev/test-architecture.adoc)

**How to test changes / Special notes to the reviewer**:

N/A

Signed-off-by: Charlie Drage <charlie@charliedrage.com>

--- a/docs/public/debugging-using-devfile.adoc
+++ b/docs/public/debugging-using-devfile.adoc
@@ -2,7 +2,7 @@
 
 `odo` uses devfiles to build and deploy components. More information on devifles : https://redhat-developer.github.io/devfile/[Introduction to devfile]
 
-To enable debugging mode for the component using devfiles, we need to enable the experimental mode for odo. This can be done by: `odo preference set experimental true`. We also need a devfile with `debugrun` step. Example of a nodejs devfile with a debugrun step:
+In order to use `odo debug` your devfile is required to have a `debugrun` step. Example of a nodejs devfile with a debugrun step:
 
 ```yaml
 apiVersion: 1.0.0
