Update commands ouputs in docs. [skip ci] Signed-off-by: Yana Hontyk <yhontyk@redhat.com>

--- a/docs/public/community.adoc
+++ b/docs/public/community.adoc
@@ -11,9 +11,9 @@ Join us on Slack via our
 https://join.slack.com/t/openshiftdo/shared_invite/enQtODUwMjIzMzE2MjYyLWM3YjlkNTViOGNjZGQ5YjFlMzc2N2RhZjVmMDQ5NWY5ZDQ3NzMzZjYxMTE1MjY5OTVmZjgxZWMyMGRmOTc4Y2I[invite
 link]
 
-* https://openshiftdo.slack.com/messages/odo-dev[Odo Dev Channel] -
+* https://openshiftdo.slack.com/messages/odo-dev[odo Dev Channel] -
 Discuss odo development
-* https://openshiftdo.slack.com/messages/odo-users[Odo Users Channel] -
+* https://openshiftdo.slack.com/messages/odo-users[odo Users Channel] -
 Ask questions and discuss your use cases with odo
 
 == Email list
@@ -55,7 +55,7 @@ https://groups.google.com/forum/#!forum/odo-dev[odo-dev Google group].
 
 === Where do I start?
 
-Odo is a complex project that touches both Kubernetes, OpenShift and
+odo is a complex project that touches both Kubernetes, OpenShift and
 Docker. We have a list of
 https://github.com/openshift/odo/issues?q=is%3Aopen+is%3Aissue+label%3A%22good+first+issue%22[good
 first issues] to help start.
