address review comments

--- a/docs/public/s2i-to-devfile.adoc
+++ b/docs/public/s2i-to-devfile.adoc
@@ -23,7 +23,7 @@ app     myapp     myproject      nodejs     local          Pushed
 
 ----
 
-. Convert s2i component to devfile component by running the following command:
+. Convert the S2I component to a devfile component by running the following command:
 +
 [source,sh]
 ----
