Add instructions on how to install VSCode plugin
**What type of PR is this?**
> Uncomment only one ` /kind` line, and delete the rest.
> For example, `> /kind bug` would simply become: `/kind bug`

/kind documentation
[skip ci]

**What does does this PR do / why we need it**:

- Adds instructions on how to install the VSCode Plugin
- Remove references to old version of odo

**Which issue(s) this PR fixes**:

N/A

**PR acceptance criteria**:

- [ ] Unit test

- [ ] Integration test

- [X] Documentation

- [ ] I have read the [test guidelines](https://github.com/openshift/odo/blob/master/docs/dev/test-architecture.adoc)

**How to test changes / Special notes to the reviewer**:

Signed-off-by: Charlie Drage <charlie@charliedrage.com>

--- a/docs/public/installing-odo.adoc
+++ b/docs/public/installing-odo.adoc
@@ -1,8 +1,8 @@
 = Installing odo
 
-The following section describes how to install `odo` on different platforms using the CLI.
+The following section describes how to install `odo` on different platforms via CLI as well as IDEs.
 
-= Installing v2.0.0-beta-1 of odo
+= Installing the odo command-line tool (v2.0.0-beta-1)
 
 v2.0.0-beta-1 of odo uses **devfile** as its default deployment mechanism.
 
@@ -10,18 +10,20 @@ v2.0.0-beta-1 of odo uses **devfile** as its default deployment mechanism.
 
 === Binary installation
 
+[source,sh]
 ----
-# curl -L https://github.com/openshift/odo/releases/download/v2.0.0-beta-1/odo-linux-amd64 -o /usr/local/bin/odo
-# chmod +x /usr/local/bin/odo
+  # curl -L https://github.com/openshift/odo/releases/download/v2.0.0-beta-1/odo-linux-amd64 -o /usr/local/bin/odo
+  # chmod +x /usr/local/bin/odo
 ----
 
 == Installing odo on macOS
 
 === Binary installation
 
+[source,sh]
 ----
-# curl -L https://github.com/openshift/odo/releases/download/v2.0.0-beta-1/odo-darwin-amd64 -o /usr/local/bin/odo
-# chmod +x /usr/local/bin/odo
+  # curl -L https://github.com/openshift/odo/releases/download/v2.0.0-beta-1/odo-darwin-amd64 -o /usr/local/bin/odo
+  # chmod +x /usr/local/bin/odo
 ----
 
 == Installing odo on Windows
@@ -51,8 +53,17 @@ The following example demonstrates how to set up a path variable. Your binaries 
 . Select *Path* from the *Variable* section and click *Edit*.
 . Click *New* and type `C:\go-bin` into the field or click *Browse* and select the directory, and click *OK*.
 
-= Installing v1.2.5 of odo
+= Installing odo in Visual Studio Code (VSCode)
 
-v1.2.5 of odo uses **Source-to-Image** as its default deployment mechanism.
+The https://marketplace.visualstudio.com/items?itemName=redhat.vscode-openshift-connector[OpenShift VSCode extension] uses both `odo` and the `oc` binary to interact with your Kubernetes or OpenShift cluster.
 
-Visit the latest link:https://docs.openshift.com/container-platform/4.5/cli_reference/developer_cli_odo/installing-odo.html[OpenShift documentation] for installation details.
+== Plugin installation
+
+. Launch VS Code Quick Open (Ctrl+P)
+
+. Paste the following command:
++
+[source,sh]
+----
+  $ ext install redhat.vscode-openshift-connector
+----
