Update doc to support installation on IBM Power for the latest version

--- a/docs/public/installing-odo.adoc
+++ b/docs/public/installing-odo.adoc
@@ -23,6 +23,15 @@ The following section describes how to install `odo` on different platforms via 
   $ chmod +x /usr/local/bin/odo
 ----
 
+== Installing odo on Linux on IBM Power
+
+=== Binary installation
+
+----
+  $ curl -L https://mirror.openshift.com/pub/openshift-v4/clients/odo/latest/odo-linux-ppc64le -o /usr/local/bin/odo
+  $ chmod +x /usr/local/bin/odo
+----
+
 == Installing odo on macOS
 
 === Binary installation
