Update doc to support installation on IBM Power.[skip ci]

--- a/docs/public/installing-odo.adoc
+++ b/docs/public/installing-odo.adoc
@@ -24,6 +24,15 @@ v2.0.0-alpha of odo uses **devfile** as its default deployment mechanism.
 # chmod +x /usr/local/bin/odo
 ----
 
+== Installing odo on Linux on IBM Power
+
+=== Binary installation
+
+----
+# curl -L https://github.com/openshift/odo/releases/download/v2.0.0-alpha-2/odo-linux-ppc64le -o /usr/local/bin/odo
+# chmod +x /usr/local/bin/odo
+----
+
 == Installing odo on macOS
 
 === Binary installation
