--- a/docs/public/community.adoc
+++ b/docs/public/community.adoc
@@ -7,14 +7,11 @@
 
 == Slack
 
-Join us on Slack via our
-https://join.slack.com/t/openshiftdo/shared_invite/enQtODUwMjIzMzE2MjYyLWM3YjlkNTViOGNjZGQ5YjFlMzc2N2RhZjVmMDQ5NWY5ZDQ3NzMzZjYxMTE1MjY5OTVmZjgxZWMyMGRmOTc4Y2I[invite
-link]
+All of our developer and user discussions happen in the https://kubernetes.slack.com/archives/C01D6L2NUAG[#odo channel on the official Kubernetes Slack].
 
-* https://openshiftdo.slack.com/messages/odo-dev[odo Dev Channel] -
-Discuss odo development
-* https://openshiftdo.slack.com/messages/odo-users[odo Users Channel] -
-Ask questions and discuss your use cases with odo
+If you haven't already joined the Kubernetes Slack, you can https://slack.k8s.io/[invite yourself here].
+
+Ask questions, inquire about odo or even discuss a new feature.
 
 == Email list
 
